# Thesis

./: Create_Instances_example.txt  MixedType_example.txt  README.md  __main__.py  hole_cleaner.py  immutable_list.py  interpreter.py  parser.py  program.py  pyproject.toml  syntaxuebersicht.md  type_checker.py  utility.py  visualise.py
examples/: Bsp1.txt  Bsp10.txt  Bsp2.txt  Bsp3.txt  Bsp4.txt  Bsp5.txt  Bsp6.txt  Bsp7.txt  Bsp8.txt  Bsp9.txt  _flows_from_.txt  animal_weight.txt  cheap_energy.txt  flows_from.txt  heat_water.txt  simple_function.txt  standard_computer.txt
src/tactics_lang/: __main__.py  ast_converter.py  context.py  helper_functions.py  hole_cleaner.py  immutable_list.py  interpreter.py  parser.py  program.py  repl.py  tactics.py  type_checker.py  utility.py  visualise.py
tests/: ParserTest.py  TypeCheckerTest.py  test_end_to_end_examples.py
